contrast issue

--- a/final_main/public/css/commonStyles.css
+++ b/final_main/public/css/commonStyles.css
@@ -23,7 +23,7 @@
   left: 10px;     
 }
 footer{
-    color: rgba(160,32,240, 0.5); 
+    color: red; 
     font-family: 'Courier New', Courier, monospace;
     font-size: 8pt;
     position: fixed;
@@ -31,7 +31,8 @@ footer{
     width: 100%;
     height: 1.0rem; 
     text-align: center;
-    background-color: lavender;
+    
+
  }
 a {
 	color: blue;
@@ -348,9 +349,9 @@ button:hover {
 }
 
 .Info {
-  background-color: rgb(40, 104, 221);
+  background-color: lightblue;
   border: none;
-  color: white;
+  color: black;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
